@startuml
skinparam dpi 160
skinparam shadowing false
skinparam classAttributeIconSize 0
title 真人导游协同当前服务类图

class "FastAPI 协同路由" as API
class RuntimeStore
class ContentStore
class ReviewTask
class GuideCorrection
class TakeoverLog

API --> RuntimeStore
API --> ContentStore
RuntimeStore --> GuideCorrection
RuntimeStore --> ReviewTask : 修正提交后创建
RuntimeStore --> TakeoverLog
@enduml
